Update to actions/upload-artifact@v4

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -3,20 +3,18 @@ name: Build THOR Remote
 on:
   push:
     branches: [ main, master ]
-  workflow_dispatch:  # Allows manual trigger
+  workflow_dispatch:
 
 jobs:
   build-windows:
-    runs-on: windows-latest  # GitHub provides this for free
+    runs-on: windows-latest
     
     steps:
-      # Step 1: Get your code
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: recursive
       
-      # Step 2: Install Rust
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -24,12 +22,10 @@ jobs:
           profile: minimal
           override: true
       
-      # Step 3: Install LLVM (for bindgen)
       - name: Install LLVM
         run: choco install llvm -y
         shell: cmd
       
-      # Step 4: Install C/C++ dependencies
       - name: Setup vcpkg
         run: |
           git clone https://github.com/microsoft/vcpkg C:\vcpkg
@@ -44,27 +40,23 @@ jobs:
           C:\vcpkg\vcpkg install aom:x64-windows-static
         shell: cmd
       
-      # Step 5: Build
       - name: Build Release
         env:
           VCPKG_ROOT: C:\vcpkg
         run: cargo build --release
         shell: cmd
       
-      # Step 6: Get Sciter DLL
       - name: Download Sciter
         run: |
           Invoke-WebRequest -Uri "https://raw.githubusercontent.com/c-smile/sciter-sdk/master/bin.win/x64/sciter.dll" -OutFile "target/release/sciter.dll"
         shell: powershell
       
-      # Step 7: Copy UI resources
       - name: Prepare resources
         run: |
           xcopy /E /I /Y src\ui target\release\src\ui
           xcopy /E /I /Y res target\release\res
         shell: cmd
       
-      # Step 8: Package everything
       - name: Create distribution package
         run: |
           mkdir distribution
@@ -74,11 +66,9 @@ jobs:
           xcopy /E /I target\release\res distribution\res
         shell: cmd
       
-      # Step 9: Upload for download
       - name: Upload build artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: THOR-Remote-Windows
           path: distribution/
           retention-days: 90
-
