--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "rustdesk"
+name = "THOR Remote"
 version = "1.4.2"
-authors = ["rustdesk <info@rustdesk.com>"]
+authors = ["Binary Dynamics"]
 edition = "2021"
 build= "build.rs"
-description = "RustDesk Remote Desktop"
+description = "THOR Remote Desktop"
 default-run = "rustdesk"
 rust-version = "1.75"
 
